--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fun Quiz - Real-time Multiplayer Quiz Platform</title>
-    <meta name="description" content="Create engaging quiz rooms, invite players, and compete in real-time. Perfect for education, team building, or just having fun!" />
+    <meta name="description" content="Create engaging quiz battles, invite players, and compete in real-time. Perfect for education, team building, or just having fun!" />
     <meta name="author" content="Fun Quiz Platform" />
 
     <meta property="og:title" content="Fun Quiz - Real-time Multiplayer Quiz Platform" />
-    <meta property="og:description" content="Create engaging quiz rooms, invite players, and compete in real-time. Perfect for education, team building, or just having fun!" />
+    <meta property="og:description" content="Create engaging quiz battles, invite players, and compete in real-time. Perfect for education, team building, or just having fun!" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
